<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:orientation="horizontal">
        <Button
            android:id="@+id/contest_button0"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/overview"
            android:textSize="12sp"
            android:maxLines="1"
            android:textColor="@color/colorBlue"
            android:background="@drawable/button_selector" />
        <Button
            android:id="@+id/contest_button1"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/problems"
            android:textSize="12sp"
            android:background="@drawable/button_selector"
            android:textColor="@color/colorBlue"
            android:maxLines="1" />
        <Button
            android:id="@+id/contest_button2"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/clarification"
            android:textSize="12sp"
            android:background="@drawable/button_selector"
            android:textColor="@color/colorBlue"
            android:maxLines="1" />
        <Button
            android:id="@+id/contest_button3"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/status"
            android:textSize="12sp"
            android:background="@drawable/button_selector"
            android:textColor="@color/colorBlue"
            android:maxLines="1" />
        <Button
            android:id="@+id/contest_button4"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/rank"
            android:textSize="12sp"
            android:background="@drawable/button_selector"
            android:textColor="@color/colorBlue"
            android:maxLines="1" />

    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/contest_details"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <!--<android.support.v4.view.ViewPager
        android:id="@+id/contestViewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>-->

</LinearLayout>